--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="settings">Settings</string>
     <string name="no_thing_to_display">No Thing to Display!</string>
     <string name="movie_backdrop_image">movie backdrop image</string>
+    <string name="getting_data">Retrieving the reviews from the server…</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
